k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hrms-api
  labels:
    app: hrms-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: hrms-api

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  template:
    metadata:
      labels:
        app: hrms-api

    spec:
      containers:
        - name: hrms-api

          image: sabarigopalsamy/hrms-api:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8081

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
