k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hrms-api-service
  labels:
    app: hrms-api

spec:
  type: ClusterIP

  selector:
    app: hrms-api

  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
